# text

./: Cargo.toml  build.rs  readme.md
.github/workflows/: build.yml
src/: main.rs
src/window/: act.rs  drag.rs  mod.rs  resize.rs
ui/: Application.slint  style.slint
ui/components/: ResizeFrame.slint  Titlebar.slint
ui/style/: CatppuccinPallete.slint  Icons.slint
