[package]
name = "text"
version = "0.1.0"
authors = ["Aenri Lovehart <aenri@loveh.art>"]
license = "CC0-1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.6"
i-slint-backend-winit = "=1.6.0"
winit = "0.30"
lazy_static = "1.4.0"
log = "0.4.21"
env_logger = "0.11.3"

[build-dependencies]
slint-build = "1.6"
